<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for units sold information in the editor [CHAR LIMIT=30] -->
    <string name="units_sold">Units Sold</string>

    <!-- Text hint for units sold field in the editor [CHAR LIMIT=30] -->
    <string name="hint_units_sold">Units</string>

    <!-- Units for Units Sold(#) [CHAR LIMIT=5] -->
    <string name="unit_units_sold">Uni.</string>

    <!-- Label for total sales information in the editor [CHAR LIMIT=30] -->
    <string name="total_sales">Total of Sales:</string>

    <!-- Label for total sales value information in the editor [CHAR LIMIT=30] -->
    <string name="total_sales_value">Sales</string>

    <!-- Units for Sales Value (€) [CHAR LIMIT=5] -->
    <string name="unit_sales_value">€</string>

    <!-- Text for product name field in the editor [CHAR LIMIT=30] -->
    <string name="product_name">Product Name:</string>

    <!-- Text hint for product name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Product Name</string>

    <!-- Text hint for product quantity field in the editor [CHAR LIMIT=30] -->
    <string name="product_quantity">Quantity:</string>

    <!-- Text hint for product quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Product Quantity</string>

    <!-- Text for product price field in the editor [CHAR LIMIT=30] -->
    <string name="product_price">Product Price:</string>

    <!-- Text hint for product price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Product Price</string>

    <!-- Supplier Email-->
    <string name="supplier_email">Supplier Email:</string>

    <!-- Hint for Supplier Email-->
    <string name="hint_supplier_email">Email</string>

    <!-- Sell Button-->
    <string name="sell_button">Sell Product</string>

    <!-- Buy Button-->
    <string name="buy_button">Buy Product</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Toast message in the Catalog Activity editor when there are no Products to Delete because tha table is empty [CHAR LIMIT=NONE] -->
    <string name="editor_no_products_to_delete">There are no Products to delete!</string>

    <!-- Toast message in the Catalog Activity editor when all Products are Deleted [CHAR LIMIT=NONE] -->
    <string name="editor_all_products_deleted">All Products deleted!</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_all_products_dialog_msg">Delete all Products?</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Toast message in Editor Activity editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in Editor Activity editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Pet saved</string>

    <!-- Toast message in Editor Activity editor when new pet has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Product update failed</string>

    <!-- Toast message in Editor Activity editor when new pet has been successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product update was successful</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Message alerting the user that the data is not saved, and asks if wants to quit-->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Message to discard changes-->
    <string name="discard">Discard</string>

    <!-- Message for continue editing-->
    <string name="keep_editing">Keep Editing</string>

    <!-- Message to select a Photo-->
    <string name="select_photo">Add Photo</string>

    <!-- Sell Editor Activity-->
    <string name="sell_product">How many Units would you like to sell?</string>

    <!-- Input quantity to Sell-->
    <string name="input_quantity">Input Quantity</string>

    <!-- Sell editor Label-->
    <string name="sell_editor_label">Sell products</string>

    <!-- Sell Confirmation-->
    <string name="sale_confirmation">Sell !</string>

    <!-- Buy editor Label-->
    <string name="buy_editor_label">Buy products</string>

    <!-- Buy Editor Activity-->
    <string name="buy_product">How many Units would you like to buy?</string>

    <!-- Buy Confirmation-->
    <string name="buy_confirmation">Buy !</string>

    <!-- Sell Confirmation-->
    <string name="sell_confirmation">Product Sold!</string>

    <!-- No more products-->
    <string name="no_more_products">No more Product to Sell!</string>

    <!-- Buy SupplierConfirmation-->
    <string name="buy_supplier_confirmation">Product Requested!</string>

    <!-- Invalid supplier product quantity-->
    <string name="invalid_quantity">Quantity must be greater than 0!</string>


</resources>
